# py-link-detective

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
py_link_detective/: __main__.py  detective.py
tests/: test_duplicate_checker.py  test_get_links.py  test_get_url_state.py  test_json_printer.py
